Fix stashing not working when Kate is quit using Ctrl+Q

BUG: 449229


(cherry picked from commit 0319a51438be5170f75c99b8ad72de7a1354c585)